1.使用注解，结合工具类在启动时加载所有的策略实现，增强可扩展性 2.将配置加载和生成数据操作分离，把一些操作移到数据加载和配置加载阶段执行